# cyclonedx-python-yaml

./: README.md  example.yaml  pyproject.toml  requirements.txt  sbom.xml  update-component-version.sh
.github/workflows/: package.yml  python-package.yml
src/: BomBuilder.py  YamlConverter.py  main.py  parser.py
